core/macros/tuple/tests/no-generics.stderr
error: proc-macro derive panicked
 --> tests/no-generics.rs:3:10
  |
3 | #[derive(Tuple2)]
  |          ^^^^^^
  |
  = help: message: No parameters were found!
